policies/security/security-known-cve-protection/log4shell-mitigation.yaml
##
# Provided by Sagar on 2023-05-16
##
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: log4shell-mitigation
  annotations:
    policies.kyverno.io/title: log4shell-mitigation
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/scored: "true"
    policies.kyverno.io/severity: HIGH
    policies.kyverno.io/category: security-known-cve-protection
    policies.kyverno.io/description: >-
      In response to CVE-2021-44228 referred to as Log4Shell, a RCE vulnerability in the Log4j library, a
      partial yet incomplete workaround for versions 2.10 to 2.14.1 of the library is to set the environment
      variable LOG4J_FORMAT_MSG_NO_LOOKUPS to "true". While this does provide some
      benefit by limiting exposure, there are still code paths which can exploit
      this vulnerability. It is highly recommended to upgrade log4j as soon as possible.
      See https://logging.apache.org/log4j/2.x/security.html for more details.
      This policy will mutate all initContainers and containers in an
      incoming Pod to add this environment variable automatically.      
spec:
  validationFailureAction: Enforce # IMPORTANT: This value is ignored for a mutation policy, but setting it to enforce just to inform others that this policy will take effect
  rules:
  - name: add-log4shell-mitigation-initcontainers
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - argocd
          - calico-system
          - cattle-fleet-system
          - cattle-impersonation-system
          - cattle-logging-system
          - cattle-monitoring-system
          - cattle-system
          - harbor
          - kube-system
          - linkerd
          - linkerd-cni
          - longhorn-system
          - tigera-operator
    mutate:
      patchStrategicMerge:
        spec:
          initContainers:
            - (name): "*"
              env:
              - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
                value: "true"
  - name: add-log4shell-mitigation-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - argocd
          - calico-system
          - cattle-fleet-system
          - cattle-impersonation-system
          - cattle-logging-system
          - cattle-monitoring-system
          - cattle-system
          - harbor
          - kube-system
          - linkerd
          - linkerd-cni
          - longhorn-system
          - tigera-operator
    mutate:
      patchStrategicMerge:
        spec:
          containers:
            - (name): "*"
              env:
              - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
                value: "true"
